--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homepage</title>
+	<title>Home Page</title>
+	<link rel="stylesheet" type="text/css" href="Content/bootstrap.css">
 </head>
-<body>
-
+<body style="background-color: #eee;">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="nav nav-header">
+				<ul style="display: inline;">
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h1 class="text-center">My name is Oyeboade Tolulope</h1>
+				</div>
+				<div class="col-md-2"></div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
