--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="Content/bootstrap.css">
 </head>
 <body style="background-color: #eee;">
-	<div class="container-fluid">
+	<div class="container">
 		<div class="row">
-			<div class="nav nav-header">
-				<ul style="display: inline;">
-					<li></li>
-					<li></li>
-					<li></li>
+			<div class="nav navbar navbar-header navbar-brand">
+				<ul class="breadcrumb" style=width: 100%">
+					<li><a href="">Home</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Contact</a></li>
 				</ul>
 			</div>
 		</div>
@@ -19,11 +19,26 @@
 			<div class="col-md-12">
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
-					<h1 class="text-center">My name is Oyeboade Tolulope</h1>
+					<img src="Images/IMG-20180108-WA0002.jpg" width="150px" height="150px" class="img-circle img-thumbnail">
 				</div>
 				<div class="col-md-2"></div>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="col-md-2"></div>
+				<div class="col-md-8">
+					<h1 class="text-center">My name is Oyeboade Tolulope</h1>
+					<h3>I am a tech enthusiast and I love to approach tasks with results in mind. I am a team player as I really love working in a team to achieve team goals and objectives. I love exploring and learning new things.I recently put in for Basic Coding Challenge and I look forward to completing all the challenges.</h3>
+				</div>
+				<div class="col-md-2"></div>
+			</div>
+		</div>
+		<footer>
+			<ul>
+				<li></li>
+			</ul>
+		</footer>
 	</div>
 </body>
 </html>
